fix(plugin): Fix error when files contain "-" character